# Conversor-

./: .gitignore  CMakeLists.txt  README.md
docs/: DESIGN.md
packaging/: README.md
packaging/linux/: README.md
packaging/macos/: README.md
packaging/windows/: README.md
src/: CMakeLists.txt
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ConversionPlan.cpp  ConversionPlan.h  EngineCommand.cpp  EngineCommand.h  FileCategory.h  FormatRegistry.cpp  FormatRegistry.h  MediaFile.h  ThemePreference.cpp  ThemePreference.h
tests/: CMakeLists.txt  core_tests.cpp
